<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_main"
    tools:context=".fragments.home.SettingsFragment"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:background="@drawable/ic_bg_arc"
        android:contentDescription="@string/content_description_bg" />

    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/_12sdp"
            android:fontFamily="@font/helvetica_neue_md"
            android:textColor="#b6b6b6"
            android:textSize="13sp" />
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_kodak_moments_logo"
            android:contentDescription="@string/content_description_kodaklogo"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/_264sdp"
        android:layout_height="@dimen/_284sdp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edittext_yourname"
                android:layout_width="@dimen/_148sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="232dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:drawableBottom="@drawable/ic_yourname_teal_selector"
                android:fontFamily="@font/helvetica_neue_bd"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/lb_hint_yourname"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="32"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/snackBarColor"
                android:textColorHighlight="@color/Teal"
                android:textColorHint="@color/text_hint_color"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <View
                android:id="@+id/divider2"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="1dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:background="@color/event_divider_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_yourname" />

            <Switch
                android:id="@+id/switch_vibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:drawableLeft="@drawable/ic_vibration_on"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/lb_vibration"
                android:textColor="@color/Light_Grey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <Switch
                android:id="@+id/switch_tone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/ic_tone_on"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/lb_volume"
                android:textColor="@color/Light_Grey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_vibration" />

            <Switch
                android:id="@+id/switch_notification"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/ic_notification_on"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/lb_notification"
                android:textColor="@color/Light_Grey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_tone" />

            <Switch
                android:id="@+id/switch_kpk_help"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/ic_kpkhelp_on"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/lb_kpk_help"
                android:textColor="@color/Light_Grey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_notification" />

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_edit_teal"
                app:layout_constraintBottom_toBottomOf="@+id/edittext_yourname"
                app:layout_constraintStart_toEndOf="@+id/edittext_yourname"
                app:layout_constraintTop_toTopOf="@+id/edittext_yourname"
                android:contentDescription="@string/content_description_editfield" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_username"
        android:layout_width="@dimen/_56sdp"
        android:layout_height="@dimen/_56sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:elevation="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        android:contentDescription="@string/content_description_userimage" />

</androidx.constraintlayout.widget.ConstraintLayout>